<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="org.st991640705.week06assignment.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/SignUpFragment" />
        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/ForgotPasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/SignUpFragment"
        android:name="org.st991640705.week06assignment.SignupFragment"
        android:label="@string/fragment_signup"
        tools:layout="@layout/fragment_signup">

        <action
            android:id="@+id/action_signupFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_signupFragment_to_loginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>

    <fragment
        android:id="@+id/ForgotPasswordFragment"
        android:name="org.st991640705.week06assignment.ForgotPasswordFragment"
        android:label="@string/fragment_forgot_password"
        tools:layout="@layout/fragment_forgot_password">

        <action
            android:id="@+id/action_forgotPasswordFragment_to_loginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_forgotPasswordFragment_to_updatePasswordFragment"
            app:destination="@id/UpdatePasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/UpdatePasswordFragment"
        android:name="org.st991640705.week06assignment.UpdatePasswordFragment"
        android:label="@string/fragment_update_password"
        tools:layout="@layout/fragment_update_password">

        <action
            android:id="@+id/action_updatePasswordFragment_to_forgotPasswordFragment"
            app:destination="@id/ForgotPasswordFragment" />
        <action
            android:id="@+id/action_updatePasswordFragment_to_loginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>


    <fragment
        android:id="@+id/homeFragment"
        android:name="org.st991640705.week06assignment.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_homeFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="org.st991640705.week06assignment.AddFragment"
        android:label="@string/fragment_add"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_addFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="org.st991640705.week06assignment.UpdateFragment"
        android:label="@string/fragment_update"
        tools:layout="@layout/fragment_update" >
        <action
            android:id="@+id/action_updateFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <argument
            android:name="id"
            app:argType="string" />
        <argument
            android:name="name"
            app:argType="string" />
        <argument
            android:name="phone"
            app:argType="string" />
        <argument
            android:name="workSchedule"
            app:argType="string" />
        <argument
            android:name="imageUrl"
            app:argType="string" />

    </fragment>
</navigation>